--- a/style.css
+++ b/style.css
@@ -196,5 +196,50 @@ main {
     background-position: center;
     background-repeat: no-repeat;
 }
-
-
+.main-comition-container {
+    width: 100%;
+    min-width: 230px;
+    max-width: 500px;
+    height: 360px;
+    margin: 0 auto;
+    font-family: 'inter', sans-serif;
+}
+.main-comition-container--title {
+    width: 70%;
+    min-width: 230px;
+    max-width: 500px;
+    height: 250px;
+    margin: 0 auto;
+}
+.main-comition-container-comition {
+    margin-bottom: 15px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    line-height: 2.3rem;
+    color: var(--secondary-blue);
+}
+.main-comition-container--fees {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background-color: var(--just-white);
+}
+.main-comition-container--fees p {
+    text-align: center;
+    align-self: center;
+}
+.container-left {
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 1.9rem;
+    font-family: 'inter', sans-serif;
+    color: #b5b0ac;
+}
+.container-right {
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.6rem;
+    font-family: 'inter', sans-serif;
+    color: #757575;
+}
