--- a/style.css
+++ b/style.css
@@ -378,6 +378,23 @@ main {
     color: #808080;
 }
 
+.bitcoin-img-container {
+    width: 100%;
+    min-width: 320px;
+    height: 100vh;
+    background-image: url('./assets/img/bitcoinbaby2x.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    text-align: center;
+}
+.bitcoin-img-container h2 {
+    padding-top: 60px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+}
 
 
 
