--- a/style.css
+++ b/style.css
@@ -318,8 +318,7 @@ main {
     min-width: 288px;
     max-width: 400px;
     height: 150px;
-    margin-bottom: 20px;
-    margin-right: 15px auto;
+    margin: 20px auto;
     padding: 15px;
     background-color: var(--black);
     border-radius: 5px;
@@ -430,14 +429,14 @@ main {
     width: 70%;
     min-width: 230px;
     max-width: 300px;
-    height: 250px;
+    height: auto;
     margin: 50px auto 0;
     padding: 0 15px;
     background-color: var(--just-white);
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(89, 73 , 30, 0.16);
 }
-.recommended {
+.recommended, .monthly, .lifetime {
     width: 100px;
     height: 31px;
     position: absolute;
@@ -477,3 +476,28 @@ main {
     font-size: 1.2rem;
     color: #757575;
 }
+.plan-card--saving {
+    width: 80%;
+    margin: 0 auto;
+    padding-top: 5px;
+    padding-bottom: 15px;
+}
+.plan-card--ca {
+    width: 151px;
+    height: 48px;
+    border-radius: 4px;
+    background-color: var(--off-white);
+    border: 2px solid var(--bitcoin-orange);
+    margin-bottom: 25px;
+    font-family: 'DM sans', sans-serif;
+    font-weight: 700;
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+}
+.plan-card--ca span {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-image: url(./assets/icons/orange-right-arrow.svg);
+    vertical-align: text-bottom;
+} 
