--- a/style.css
+++ b/style.css
@@ -101,6 +101,12 @@ main {
     max-width: 900px;
     margin: 0 auto;
 }
+.main-tables-container {
+    display: flex;
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x proximity;
+}
 .main-exchange-container .backgroungImg {
     width: 200px;
     height: 200px;
@@ -127,10 +133,11 @@ main {
 }
 .main-currency-table {
     width: 70%;
+    scroll-snap-align: center;
     min-width: 235px;
     max-width: 500px;
     height: 360px;
-    margin: 0 auto;
+    margin: 0 30px 0 50px;
     font-family: 'inter', sans-serif;
 }
 .main-currency-table .currency-table--tittle {
@@ -213,10 +220,11 @@ main {
 }
 .main-comition-container {
     width: 100%;
+    scroll-snap-align: center;
     min-width: 230px;
     max-width: 500px;
     height: 360px;
-    margin: 0 auto;
+    margin: 0 50px 0 30px;
     font-family: 'inter', sans-serif;
     text-align: center;
 }
@@ -508,3 +516,29 @@ main {
     background-image: url(./assets/icons/orange-right-arrow.svg);
     vertical-align: text-bottom;
 } 
+
+footer {
+    display: flex;
+    width: 100%;
+    height: 150px;
+    background-color: var(--bitcoin-orange);
+}
+footer section {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+footer .left ul {
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    list-style: none;
+}
+.left li {
+    margin: 10px 0;
+    color: var(--just-white);
+}
+.left a {
+    text-decoration: none;
+}
