--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ main {
     color: var(--warm-black);
 }
 .main-comition-container {
-    width: 100%;
+    width: 70%;
     scroll-snap-align: center;
     min-width: 230px;
     max-width: 500px;
@@ -244,6 +244,8 @@ main {
 }
 .main-comition-container--fees {
     width: 100%;
+    min-width: 230px;
+    max-width: 300px;
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
